objects/AR_CustomObject1__c.object
<CustomObject>
    <description>Changing the description for EZ-Commits</description>
    <fields>
        <fullName>AR_CustomField1__c</fullName>
        <label>AR-CustomField1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AR_CustomField4__c</fullName>
        <label>AR-CustomField4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AR_Custom_Field3__c</fullName>
        <label>AR-Custom Field3</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestARField2__c</fullName>
        <label>TestARField2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestARField__c</fullName>
        <label>TestARField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestFieldAR__c</fullName>
        <label>TestFieldAR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>AR-CustomObject1</label>
    <nameField>
        <label>AR-CustomObject1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AR-CustomObject1s</pluralLabel>
    <recordTypes>
        <fullName>TestRecordType</fullName>
        <active>true</active>
        <label>TestRecordType</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>